# 2d-Wizzard-runner

./: CMakeLists.txt  README.md  check_padding.cpp
src/: AnimData.hpp  Boss.cpp  Boss.hpp  Constants.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  Level.cpp  Level.hpp  ParallaxBG.cpp  ParallaxBG.hpp  Player.cpp  Player.hpp  UI.cpp  UI.hpp  main.cpp
